<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_group_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="4dip"
    android:visibility="visible">


  <LinearLayout
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="1.0"
      android:orientation="vertical">

    <com.helix.widget.SolomonTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/card_margin"
        android:paddingStart="@dimen/card_margin"
        android:text="@string/movie_detail_genre"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorGrey"/>

    <com.helix.widget.SolomonTextViewRegular
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/card_margin"
        android:paddingStart="@dimen/card_margin"
        android:paddingTop="4dip"
        android:text="@string/movie_detail_genre"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorGrey"/>

    <com.helix.widget.SolomonTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/card_margin"
        android:paddingStart="@dimen/card_margin"
        android:paddingTop="8dip"
        android:text="@string/movie_detail_release_date_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorGrey"/>

    <com.helix.widget.SolomonTextViewRegular
        android:id="@+id/release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/card_margin"
        android:paddingStart="@dimen/card_margin"
        android:paddingTop="4dip"
        android:text="@string/movie_detail_release_date_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorGrey"/>

    <com.helix.widget.SolomonTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/card_margin"
        android:paddingStart="@dimen/card_margin"
        android:paddingTop="8dip"
        android:text="@string/movie_detail_runtime_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorGrey"/>

    <com.helix.widget.SolomonTextViewRegular
        android:id="@+id/run_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/card_margin"
        android:paddingStart="@dimen/card_margin"
        android:paddingTop="4dip"
        android:text="@string/movie_detail_runtime_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorGrey"/>


    <com.helix.widget.SolomonTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/card_margin"
        android:paddingStart="@dimen/card_margin"
        android:paddingTop="8dip"
        android:text="@string/movie_detail_vote_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorGrey"/>

    <com.helix.widget.SolomonTextViewRegular
        android:id="@+id/vote_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/card_margin"
        android:paddingStart="@dimen/card_margin"
        android:paddingTop="4dip"
        android:text="@string/movie_detail_vote_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorGrey"/>

    <com.helix.widget.SolomonTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/card_margin"
        android:paddingStart="@dimen/card_margin"
        android:paddingTop="8dip"
        android:text="@string/movie_detail_revenue_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorGrey"/>

    <com.helix.widget.SolomonTextViewRegular
        android:id="@+id/revenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/card_margin"
        android:paddingStart="@dimen/card_margin"
        android:paddingTop="4dip"
        android:text="@string/movie_detail_revenue_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorGrey"/>

  </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_marginEnd="@dimen/card_margin"
      android:layout_marginStart="@dimen/card_margin"
      android:orientation="vertical">

    <com.helix.widget.SolomonTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dip"
        android:gravity="end"
        android:text="@string/movie_detail_director_header"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_card"
        android:layout_width="62dip"
        android:layout_height="90dip"
        android:layout_gravity="end"
        android:layout_marginTop="4dip"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardElevation="6dip"
        card_view:cardPreventCornerOverlap="true">

      <android.support.v7.widget.AppCompatImageView
          android:id="@+id/img_crew"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
      />


    </android.support.v7.widget.CardView>

    <com.helix.widget.SolomonTextViewRegular
        android:id="@+id/txt_crew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="2"
        android:minLines="2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorGrey"
    />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img_imdb"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_gravity="bottom|end"
        android:paddingEnd="0dip"
        android:paddingStart="8dip"
        android:paddingTop="8dip"
        android:src="@drawable/ic_imdb"/>

  </LinearLayout>


</LinearLayout>


